@@ -1,3 +1,6 @@
+2009-01-24 - Sean Huber (shuber@huberry.com)
+  * Move InstanceMethods and ClassMethods modules under ModelMethods
+
 2009-01-09 - Sean Huber (shuber@huberry.com)
   * Add authentication_options cattr_accessor
   * Update README
